@@ -1,3 +1,11 @@
+2001-02-22  Arik Devens  <arik@eazel.com>
+
+	reviewed by: Maciej Stachowiak  <mjs@eazel.com>
+
+	* test/test-nautilus-viewport-constraint.c: (create_row), (main):
+	Updated so that it uses to vbox's to test each of the constrain
+	functions.
+
 2001-02-22  Robey Pointer  <robey@eazel.com>
 
 	reviewed by: Mike Fleming  <mfleming@eazel.com?
